# claude-sessions

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/: demo.tape
src/sessions_tui/: __init__.py  __main__.py  active.py  app.py  cache.py  cli.py  demo.py  models.py  scanner.py  search.py
src/sessions_tui/styles/: app.tcss
src/sessions_tui/widgets/: __init__.py  detail_pane.py  search_bar.py  session_list.py  status_bar.py
