[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-sessions"
version = "0.1.0"
description = "Terminal UI for browsing Claude Code sessions"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0.0",
]

[project.scripts]
claude-sessions = "sessions_tui.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
